# Advent-Of-FPGA-2025

./: .gitignore  README.md  aofpga.opam  dune-project
lib/: bcd_to_binary.ml  count_trailing_ones.ml  counter.ml  dune  looping_down_counter.ml  stack.ml
python_reference/: solve.py  solve_hardware_friendly.py
test/: dune  test_bcd_to_binary.ml  test_count_trailing_ones.ml  test_stack.ml
